--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.1",
+    "redux-persist": "^4.8.1",
     "redux-saga": "^0.15.3"
   }
 }
