--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,32 +1,20 @@
 {
   "parser": "babel-eslint",
   "env": {
-    "browser": true
+    "browser": true,
+    "jest": true
   },
-  "plugins": [
-    "react"
-  ],
-  "extends": [
-    "airbnb"
-  ],
+  "plugins": ["react"],
+  "extends": ["airbnb"],
   "rules": {
     "react/jsx-filename-extension": [
       2,
       {
-        "extensions": [
-          ".js",
-          ".jsx"
-        ]
+        "extensions": [".js", ".jsx"]
       }
     ],
-    "react/forbid-prop-types": [
-      0
-    ],
-    "react/require-default-props": [
-      0
-    ],
-    "global-require": [
-      0
-    ]
+    "react/forbid-prop-types": [0],
+    "react/require-default-props": [0],
+    "global-require": [0]
   }
 }
