Export from crna

--- a/app.json
+++ b/app.json
@@ -3,5 +3,7 @@
     "sdkVersion": "16.0.0",
     "orientation": "portrait",
     "privacy": "public"
-  }
+  },
+  "name": "CurrencyConverter",
+  "displayName": "Currency Converter"
 }
