--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native": "^0.43.4",
     "react-native-dropdownalert": "^2.8.0",
     "react-native-extended-stylesheet": "^0.4.0",
+    "react-native-splash-screen": "^2.1.0",
     "react-native-vector-icons": "^4.2.0",
     "react-navigation": "^1.0.0-beta.9",
     "react-redux": "^5.0.4",
