--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -90,7 +90,7 @@ android {
         applicationId "com.handlebarlabs.currencyconverter"
         minSdkVersion 16
         targetSdkVersion 22
-        versionCode 2
+        versionCode project.hasProperty('versionCode') ? project.property('versionCode') as int : 1
         versionName "1.0"
         ndk {
             abiFilters "armeabi-v7a", "x86"
