--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "babel-eslint": "^7.2.3",
+    "babel-preset-react-native-stage-0": "^1.0.1",
     "eslint": "^4.5.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
@@ -12,15 +13,12 @@
     "jest-expo": "^20.0.0",
     "prettier": "^1.5.3",
     "prettier-eslint": "^6.4.2",
-    "react-native-scripts": "1.2.1",
     "react-test-renderer": "16.0.0-alpha.6"
   },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "test": "node node_modules/jest/bin/jest.js --watch",
     "test:coverage": "node node_modules/jest/bin/jest.js --coverage && open coverage/lcov-report/index.html",
     "lint": "eslint app/",
@@ -28,12 +26,13 @@
   },
   "jest": {
     "preset": "jest-expo",
-    "collectCoverageFrom": ["app/*.js", "app/**/*.js"]
+    "collectCoverageFrom": [
+      "app/*.js",
+      "app/**/*.js"
+    ]
   },
   "dependencies": {
-    "@expo/vector-icons": "^5.1.0",
     "color": "^2.0.0",
-    "expo": "^20.0.0",
     "hoist-non-react-statics": "^2.3.0",
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
@@ -41,6 +40,7 @@
     "react-native": "^0.47.2",
     "react-native-dropdownalert": "^2.8.0",
     "react-native-extended-stylesheet": "^0.6.0",
+    "react-native-vector-icons": "^4.4.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.4",
     "redux": "^3.7.2",
