--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.3.0",
     "jest-expo": "^21.0.2",
+    "lodash": "^4.17.4",
     "prettier": "^1.5.3",
     "prettier-eslint": "^6.4.2",
     "react-dom": "^16.0.0",
     "react-native-scripts": "1.2.1",
     "react-test-renderer": "^16.0.0",
+    "redux-mock-store": "^1.3.0",
     "sinon": "^4.0.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -26,15 +28,19 @@
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
     "test": "node node_modules/jest/bin/jest.js --watch",
-    "test:coverage":
-      "node node_modules/jest/bin/jest.js --coverage && open coverage/lcov-report/index.html",
+    "test:coverage": "node node_modules/jest/bin/jest.js --coverage && open coverage/lcov-report/index.html",
     "lint": "eslint app/",
     "lint:fix": "eslint app/ --fix"
   },
   "jest": {
     "preset": "jest-expo",
-    "collectCoverageFrom": ["app/*.js", "app/**/*.js"],
-    "setupFiles": ["./tests/setup.js"]
+    "collectCoverageFrom": [
+      "app/*.js",
+      "app/**/*.js"
+    ],
+    "setupFiles": [
+      "./tests/setup.js"
+    ]
   },
   "dependencies": {
     "@expo/vector-icons": "^5.1.0",
