--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "jest-expo": "^23.0.0",
     "prettier": "^1.5.3",
     "prettier-eslint": "^8.2.2",
-    "react-native-scripts": "1.7.0",
+    "react-native-scripts": "^1.13.2",
     "react-test-renderer": "^16.1.1"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -29,14 +29,14 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^6.2.0",
+    "@expo/vector-icons": "^6.3.1",
     "color": "^2.0.0",
-    "expo": "^23.0.2",
+    "expo": "^26.0.0",
     "hoist-non-react-statics": "^2.3.0",
-    "moment": "^2.18.1",
-    "prop-types": "^15.5.10",
-    "react": "^16.1.1",
-    "react-native": "^0.50.4",
+    "moment": "^2.22.1",
+    "prop-types": "^15.6.1",
+    "react": "16.3.0-alpha.1",
+    "react-native": "^0.54.0",
     "react-native-dropdownalert": "^3.1.2",
     "react-native-extended-stylesheet": "^0.8.0",
     "react-navigation": "^1.0.0-beta.21",
