--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react": "16.3.0-alpha.1",
     "react-native": "^0.54.0",
     "react-native-dropdownalert": "^3.4.0",
-    "react-navigation": "^1.0.0-beta.21",
+    "react-navigation": "^1.5.11",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.1",
