--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
+    "jest-expo": "^26.0.0",
     "prettier": "1.12.1",
     "prettier-eslint": "^8.8.1",
     "react-native-scripts": "^1.13.2",
@@ -20,9 +21,12 @@
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node_modules/.bin/jest",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
     "expo": "^26.0.0",
