--- a/app.json
+++ b/app.json
@@ -1,7 +1,4 @@
 {
-  "expo": {
-    "sdkVersion": "26.0.0",
-    "orientation": "portrait",
-    "privacy": "public"
-  }
+  "name": "CurrencyConverter",
+  "displayName": "CurrencyConverter"
 }
