--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^5.9.1",
     "redux-saga": "^0.16.0"
   },
   "devDependencies": {
