--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "react": "16.3.1",
     "react-native": "0.55.3",
+    "react-native-splash-screen": "^3.0.6",
     "react-navigation": "^1.5.11",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
@@ -41,7 +42,12 @@
   },
   "jest": {
     "preset": "react-native",
-    "collectCoverageFrom": ["app/*.js", "app/**/*.js"],
-    "setupFiles": ["./tests/setup.js"]
+    "collectCoverageFrom": [
+      "app/*.js",
+      "app/**/*.js"
+    ],
+    "setupFiles": [
+      "./tests/setup.js"
+    ]
   }
 }
